# footron-windows

./: setup.cfg
footron_windows/: __main__.py  app.py  controller.py  gamepad.py  job_popen.py
footron_windows/controller_input/: api.py  gamepad.py  old_lol.py
