[metadata]
name = footron-windows-controller
version = 0.1
url = https://github.com/BYU-PCCL/footron-windows
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi[all]
    uvicorn[standard]
    pywin32
    # inputs @ git+https://github.com/BYU-PCCL/inputs.git
    # This fork adds support for the guide button
    xinput @ git+https://git.example.com/MyProject.git@add_guide_button


