[metadata]
name = footron-windows-controller
version = 0.1
url = https://github.com/BYU-PCCL/footron-windows
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi[all]
    uvicorn[standard]
    pywin32
    # This fork adds support for the guide button
    XInput-Python @ git+https://github.com/danielbibit/XInput-Python.git@add_guide_button



